# dict8-blog

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/dict8/: __init__.py  agent.py  build_styles.py  main.py  phases.py  projects.py  worker.py
src/dict8-blog/: main.py
src/dict8-blog/agents/: __init__.py  base.py  context_gathering_agent.py  layout_agent.py  overview_agent.py  writing_agent.py
src/dict8-blog/agents/prompts/: phase_2.txt  phase_3.txt  phase_4.txt
src/dict8-blog/prompts/: overview_agent_greeting.md  sys.md
src/dict8/agents/: __init__.py  base.py  context_gathering_agent.py  layout_agent.py  overview_agent.py  phase1.py  phase2.py  phase3.py  phase4.py  research_agent.py  writing_agent.py
src/dict8/llm/: blog_writer.py  client.py  context_optimizer.py  style_profiler.py
src/dict8/prompts/: blog_writer.md  context_gathering_agent_base.md  context_gathering_agent_greeting.md  context_optimizer.md  layout_agent_base.md  overview_agent_base.md  phase1_base.md  phase1_greeting.md  phase2_greeting.md  phase3_base.md  phase4_base.md  style_profiler.md  sys.md  writing_agent_base.md  writing_agent_greeting.md
src/dict8/style_profiles/: author_md_prompt.md
src/dict8/style_profiles/greg_brockman/: author.md
src/dict8/style_profiles/ludwig-stockbauer-muhr/: on-answering-150-dms-on-x-in-48hrs.md  some-thoughts-about-myself.md
src/dict8/style_profiles/ludwig_stockbauer_muhr/: author.md  (+1 more)
src/dict8/utils/: __init__.py
tests/: conftest.py  utils.py
tests/unit/: test_phase1_list_projects.py
(+7 files in other folders)
