[project]
name = "dict8-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "livekit-agents[silero,turn-detector]>=1.4.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "pyright>=1.1.408",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
]
